# easy-check

./: .gitignore  LICENCE  README.md
demo/: Makefile
demo/exercises/: depend.txt  index.json
demo/exercises/ex1/: solution.ml  template.ml  test.ml
demo/exercises/ex2/: descr.md  meta.json  prepare.ml  solution.ml  test.ml
demo/exercises/exo1/: depend.txt  descr.md  meta.json  prepare.ml  solution.ml  template.ml  test.ml  test_libs.txt
demo/exercises/exo2/: descr.md  meta.json  prepare.ml  solution.ml  template.ml  test.ml
easy-check/: utils.ml
easy-check/assume/: assume.ml  assume.mli
easy-check/check/: check.ml  check.mli  falsify.ml  falsify.mli
easy-check/get/: get.ml
easy-check/protect/: protect.ml  protect.mli
easy-check/result/: result.ml  result.mli
easy-check/show/: show.ml
easy-check/src/: dune
easy-check/src/assume/: assume.ml  assume.mli
easy-check/src/check/: check.ml  check.mli  check_support.ml  check_support.mli
easy-check/src/get/: get.ml  get.mli
easy-check/src/protect/: protect.ml
easy-check/src/result/: result.ml
easy-check/src/show/: show.mli
easy-check/src/test_env/: test_env.ml  test_env.mli
easy-check/src/testers/: autotest.ml  manually.ml
easy-check/src/translation/: translation.ml  translation.mli
easy-check/test_env/: test_env.ml  test_env.mli
easy-check/testers/: autotest.ml  autotest.mli  forall.ml  forall.mli  manually.mli  samples.ml  samples.mli
learn-ocaml++/: README.md
learn-ocaml++/src/grader/: build.ocp  dune  introspection.ml
learn-ocaml++/src/ppx-metaquot/: build.ocp  dune  expr.ml  (+1 more)
